modificacion de la tabla documentos y consecuentes, agrege endpoints de actualizar stock y reestock
